add drawString, drawChar and setTextColor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,5 +42,6 @@ foreach( testsourcefile ${EXAMPLES_SRC} )
     		RUNTIME_OUTPUT_DIRECTORY ${example_dir})
     target_link_libraries(${base_name} ${WPI_LIB})
     target_link_libraries( ${base_name} st7735 )
+    target_link_libraries( ${base_name} pthread )
     target_include_directories(${base_name} PUBLIC lib)
 endforeach( testsourcefile ${EXAMPLES_SRC} )
